10.oct (db)
      - fix local handbook disabled when no file is open
      - fix #7425: Space bar for play/pause (and zero for rests)
      - correct stem lengths for multi-flag notes (see bug #7415)
8.oct (ws)
      - fix #7416: triplet causes crash
      - fix #7418: crash when delete soundfont while playing
      - fix #1395: Accidental after a tied note
      - fix #7415: stems too short for 32th and 64th notes
6.oct (ws)
      - fix #7403: double note duration (W) changes pitch
      - remove unused "system" text styles
      - remove page number text styles
      - replace text style number by text style name in .msc[xz] files to
        make text styles more easily extendable
      - new text property "styled". Styled text changes if the associated
        style changes.
5. oct (ws)
      - better tuplet layout (#7375)
      - fix copy&paste of tuplets
      - bb import fixes
      - capella import fixes
      - fix: some elements were not clickable before second layout pass
3. oct (ws)
      - create full measure rests on midi import
2. oct (ws)
      - added libpoppler to build system
      - remove libgsl dependency from omr build
      (lv)
      - #5637 support reading bww files: fix beam start
1. oct (ws)
      - fix #7345: opening bach-bc2 demo causes crash
      - TextStyle and Style are now implicitly shared objects to reduce
        memory resources and speedup some operations
      - move TextStyle to Style
29.sep (ws)
      - fix #7303
      - another attempt to fix #7227
      - make it easier to parallel install musescore-0.9.6.x and trunk:
         - changed install path from mscore-0.9 to mscore-1.0
         - changed "organization name" from MusE to MuseScore
         - changed "organization domain" from muse.org to musescore.org
         - changed "application name" from MuseScore to MuseScore1; this changes the
           shared files path
         - mscore-0.9.6 can be started parallel to trunk version to make